# ws_rhapsodi-promtek

./: .dockerignore  .gitignore  Dockerfile  GIT_WORKFLOW.md  PYTHON_DEPENDENCIES.md  README.md  ROS2_HAZEL_MIGRATION.md  ROS2_JAZZY_MIGRATION.md  SAFETY_GUIDE.md  docker-compose.yml
docker/: README.md  dashboard.Dockerfile  entrypoint.sh
src/: requirements.maint  requirements.txt  requirements_unity.maint  ros2.repos  ruff.toml
src/backend/: Dockerfile  app.py  requirements.txt
src/dashboard/: .env.local  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src/dashboard/src/: App.tsx  index.css  main.tsx
src/niryo_mtc_demos/: CMakeLists.txt  package.xml
src/niryo_mtc_demos/launch/: mtc_demos.launch.py
src/niryo_mtc_demos/src/: alternative_path_costs.cpp
src/niryo_ned_moveit_configs/niryo_ned2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/niryo_ned_moveit_configs/niryo_ned3pro_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/niryo_ned_ros2_driver/: package.xml  setup.cfg  setup.py
src/niryo_ned_ros2_driver/config/: drivers_list.yaml  whitelist.yaml
src/niryo_ned_ros2_driver/launch/: driver.launch.py
src/niryo_ned_ros2_driver/niryo_ned_ros2_driver/: action.py  bridge_node.py  ros2_driver.py  service.py  tf_static_topic.py  topic.py
src/niryo_ned_ros2_driver/niryo_ned_ros2_driver/utils/: constants.py  conversion.py  debug.py  filtering.py  loopback_filter.py  models.py  type_mapping.py
src/niryo_ned_ros2_driver/tests/: conftest.py  test_action.py  test_service.py  test_tf_static_topic.py  test_topic.py
src/niryo_ned_ros2_driver/tests/integration/: test_integration.py  test_whitelist.yaml
src/niryo_ned_ros2_driver/tests/utils/: test_conversion.py  test_filtering.py  test_loopback_filter.py  test_type_mapping.py
src/niryo_ned_ros2_interfaces/: CMakeLists.txt  package.xml
src/niryo_ned_ros2_interfaces/action/: RobotMove.action  Tool.action
src/niryo_ned_ros2_interfaces/msg/: ActiveDebugTopics.msg  AnalogIOState.msg  ArmMoveCommand.msg  ArrayMotorHardwareStatus.msg  BasicObjectArray.msg  BusState.msg  ConnectionState.msg  ConveyorFeedback.msg  ConveyorFeedbackArray.msg  DigitalIOState.msg  DynamicFrame.msg  HotspotButtonStatus.msg  JointLimits.msg  JointTrajectory.msg  JointTrajectoryPoint.msg  LedRingCurrentState.msg  LedRingStatus.msg  MotorHardwareStatus.msg  NiryoPose.msg  ProgramList.msg  RobotState.msg  Service.msg  SoundList.msg  TCP.msg  Workspace.msg
src/niryo_ned_ros2_interfaces/srv/: ActivateDebugTopics.srv  CheckConnection.srv  ExecuteProgram.srv  FactoryCalibration.srv  GetAllByType.srv  GetCpuTemperature.srv  GetDynamicFrame.srv  GetFK.srv  GetHardwareId.srv  GetIK.srv  GetJointLimits.srv  GetMetric.srv  GetNameDescriptionList.srv  GetPose.srv  GetProgram.srv  GetProgramList.srv  GetTargetPose.srv  GetTransformPose.srv  GetWorkspaceRobotPoses.srv  LedUser.srv  ManageDynamicFrame.srv  ManagePose.srv  ManageProgram.srv  ManageWorkspace.srv  ObjDetection.srv  PingDxlTool.srv  ScanI2CBus.srv  SetConveyor.srv  SetTCP.srv
src/niryo_robot_control/: CMakeLists.txt  package.xml  setup.py
src/niryo_robot_control/config/: .placeholder
src/niryo_robot_control/launch/: moveit_control.launch.py
src/niryo_robot_control/niryo_robot_control/: __init__.py  moveit_control_node.py
src/niryo_robot_control/src/: moveit_control_node.cpp  moveit_warehouse_test_node.cpp
src/niryo_robot_description/: CMakeLists.txt  package.xml
src/niryo_robot_moveit_interface/: .setup_assistant  CMakeLists.txt  package.xml
src/niryo_robot_moveit_interface/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  niryo_ned3pro.ros2_control.xacro  niryo_ned3pro.srdf  niryo_ned3pro.urdf  (+3 more)
src/niryo_robot_simulation_client/: CMakeLists.txt  package.xml
src/perception_module/: package.xml  setup.py
src/pouring_controller/: CMakeLists.txt  README.md  package.xml  pour_plugins.xml
src/pouring_controller/include/pouring_controller/: bangbang_trickle.hpp  control_law.hpp  pid_vibration.hpp  pour_server.hpp
src/pouring_controller/src/: bangbang_trickle.cpp  pid_vibration.cpp  pour_client_demo.cpp  pour_server.cpp  pour_server_node.cpp
src/qr_scanner/: CMakeLists.txt  README.md  package.xml
src/qr_scanner/include/qr_scanner/: scan_qr_server.hpp
src/qr_scanner/src/: scan_qr_server.cpp  scan_qr_server_node.cpp
src/realsense_snapshot_analyzer/: README.md  package.xml  setup.cfg  setup.py
src/robot_common_msgs/: CMakeLists.txt  package.xml
src/robot_common_msgs/action/: MoveTo.action  PourToTarget.action  ScanQr.action  Scoop.action
src/robot_common_msgs/msg/: ContainerSpec.msg  PourStatus.msg  SystemStatus.msg
src/robot_common_msgs/srv/: RecordTarget.srv  StartBatch.srv
src/robot_moveit/: CMakeLists.txt  README.md  package.xml
src/robot_moveit/config/: targets.yaml
src/robot_moveit/include/robot_moveit/: move_to_server.hpp  target_recorder.hpp
src/robot_moveit/src/: move_to_server.cpp  move_to_server_node.cpp  target_recorder.cpp  target_recorder_node.cpp
src/robot_orchestrator/: CMakeLists.txt  README.md  package.xml
src/robot_orchestrator/bt_trees/: main.xml
src/robot_orchestrator/include/robot_orchestrator/: capture_baseline_node.hpp  check_remaining_node.hpp  compute_effective_target_node.hpp  compute_remaining_node.hpp  fetch_batch_node.hpp  has_active_container_node.hpp  load_next_container_node.hpp  move_to_node.hpp  pour_to_target_node.hpp  project_container_node.hpp  queue_status_node.hpp  register.hpp  scale_weight_node.hpp  scan_qr_node.hpp  vibrate_node.hpp  wait_seconds_node.hpp  weight_delta_node.hpp  weight_fresh_node.hpp
src/robot_orchestrator/src/: compute_remaining_node.cpp  fetch_batch_node.cpp  has_active_container_node.cpp  load_next_container_node.cpp  move_to_node.cpp  orchestrator_main.cpp  pour_to_target_node.cpp  project_container_node.cpp  register_nodes.cpp  scan_qr_node.cpp
src/scooping_controller/: CMakeLists.txt  package.xml
src/weighing_scale_driver/: CMakeLists.txt  package.xml
(+52 files in other folders)
