<?xml version="1.0"?>
<package format="3">
  <name>pouring_controller</name>
  <version>0.1.0</version>
  <description>Closed-loop pouring Action server (skeleton).</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>robot_common_msgs</depend>
  <depend>pluginlib</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="${prefix}/pour_plugins.xml"/>
  </export>
</package>


