<?xml version="1.0"?>
<package format="3">
  <name>robot_moveit</name>
  <version>0.1.0</version>
  <description>MoveIt-based motion Action server for MoveTo requests.</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>robot_common_msgs</depend>

  <!-- MoveIt -->
  <depend>moveit_ros_planning_interface</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


