<?xml version="1.0"?>
<package format="3">
  <name>robot_orchestrator</name>
  <version>0.1.0</version>
  <description>BehaviorTree-based orchestrator for powder handling robot.</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>robot_common_msgs</depend>
  <depend>behaviortree_cpp</depend>
  <depend>behaviortree_ros2</depend>
  <depend>std_srvs</depend>
  <depend>ament_index_cpp</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>




